test/sema/typeck/trait/object-cast-not-implementing.out
error: type `Bar` does not implement trait `Foo`.
--> object-cast-not-implementing.dora:5:7
 | fn f(x: Foo) {}
 | fn g() {
 |     f(Bar() as Foo)
         ~~~~~~~~~~~~
 | }
 | 
1 error found.
