test/sema/typeck/trait/object-cast-not-implementing.dora
trait Foo { fn bar(): Int32; }
class Bar
fn f(x: Foo) {}
fn g() {
    f(Bar() as Foo)
}
